<resources>
    <string name="app_name">Endrone_Mobile_App</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="nav_header_desc">Description</string>
    <string name="nav_header_title">Navigation Title</string>
    <string name="nav_header_subtitle">Sub Title</string>
    <string name="transactions">Sale History</string>
    <string name="endShift">End Shift</string>
    <string name="company_logo">Company Logo</string>
    <string name="emailTextHint">Enter Email</string>
    <string name="etPasswordHint">Enter Password</string>
    <string name="title_activity_fullscreen">FullscreenActivity</string>
</resources>