<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#66FFFFFF"
    android:fillViewport="true"
    tools:context=".layouts.StartShiftLayout.StartShiftFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <ProgressBar
                android:id="@+id/progressBar"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:indeterminate="true"
                android:visibility="invisible" />

        </LinearLayout>


        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="24dp"
            android:contentDescription="@string/company_logo"
            android:src="@drawable/endrone_logo" />

        <LinearLayout
            android:id="@+id/view_edit_text"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:orientation="vertical">

            <EditText
                android:id="@+id/et_email"
                style="@style/NumberPicker.Outlined"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="24dp"
                android:autofillHints="Email"
                android:hint="@string/emailTextHint"
                android:focusable="true"
                android:inputType="textEmailAddress"
                android:textAlignment="center"
                tools:ignore="LabelFor" />

            <EditText
                android:id="@+id/et_pass"
                style="@style/NumberPicker.Outlined"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="24dp"
                android:autofillHints="password"
                android:focusable="true"
                android:hint="@string/etPasswordHint"
                android:inputType="textPassword"
                android:textAlignment="center"
                tools:ignore="LabelFor" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="4"
            android:gravity="center"
            android:orientation="vertical">

            <Button
                android:id="@+id/button"
                style="@style/Widget.MaterialComponents.Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="Start Shift"/>

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>